# 13-LOTO-ULTIME

./: .editorconfig  .env.docker  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README_RUNDEV.md  docker-compose.yml
backend/: .dockerignore  =0.21.0  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 17f0eca1a355_initial_schema.py  6773450d8c55_add_star_statistics_columns.py  78d468fdbb48_make_last_login_timezone_aware.py  7bcd4a4c4933_merge_phase_b_and_timezone_fix.py  990d5f890631_add_grid_draw_results_and_user_.py  a1b2c3d4e5f6_phase_e_secondary_indexes.py  a3b4c5d6e7f8_add_is_favorite_to_scored_grids.py  b1c2d3e4f5a6_add_is_played_to_scored_grids.py  c2d3e4f5a6b7_phase_a_blacklist_indexes.py  d4e5f6a7b8c9_phase_b_models.py  e5f6a7b8c9d0_phase_c_wheeling_systems.py  f1a2b3c4d5e6_phase_c_budget_plans.py
backend/app/: __init__.py  dependencies.py  main.py
backend/app/core/: cache.py  circuit_breaker.py  config.py  exceptions.py  feature_flags.py  game_definitions.py  logging.py  metrics.py  prize_tier_data.py  rate_limit.py  security.py  token_blacklist.py
backend/app/models/: base.py  budget.py  draw.py  game.py  grid.py  grid_draw_result.py  job.py  notification.py  portfolio.py  prize_tier.py  saved_result.py  statistics.py  token_blacklist.py  user.py  wheeling.py
backend/app/plugins/: __init__.py  base.py  registry.py
backend/app/repositories/: base.py  budget_repository.py  draw_repository.py  game_repository.py  grid_draw_result_repository.py  grid_repository.py  job_repository.py  (+6 more)
backend/game_configs/: euromillions.yaml  keno.yaml  loto_fdj.yaml  mega_millions.yaml  powerball.yaml
backend/tests/: conftest.py
(+389 files in other folders)
